--- a/backend/src/main/resources/application-local.yml
+++ b/backend/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 # Local development profile. Activate with `--spring.profiles.active=local`
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/property_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/smart_property_system?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root # TODO: replace with local MySQL username
     password: 123456 # TODO: replace with local MySQL password
   jpa:
