--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=local
 server.port=8080
 
 # 数据源配置（默认连接到本地 MySQL，可通过环境变量覆盖）
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/property_db?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/smart_property_system?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:root}
 
