--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.7.4",
+    "echarts": "^6.0.0",
     "pinia": "^2.1.7",
     "vue": "^3.4.27",
+    "vue-echarts": "^8.0.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
