feat: 实现文件管理系统核心后端功能
- 创建File实体类和FileCategory枚举
- 实现FileStorageConfig文件存储配置
- 创建FileRepository数据访问层
- 实现FileService核心业务逻辑
  * 文件上传（支持分类、大小验证、类型验证）
  * 文件下载和预览
  * 文件删除（磁盘+数据库）
  * 封面图片设置
  * 文件查询和统计
- 创建FileController REST API
  * POST /api/files/upload - 文件上传
  * GET /api/files/download/{fileName} - 文件下载
  * GET /api/files/preview/{fileName} - 在线预览
  * GET /api/files/{fileId} - 获取文件详情
  * GET /api/files/entity/{category}/{entityId} - 获取关联文件
  * GET /api/files/cover/{propertyId} - 获取封面图片
  * PUT /api/files/{fileId}/set-cover - 设置封面
  * DELETE /api/files/{fileId} - 删除文件
  * GET /api/files/count/{category}/{entityId} - 统计数量
- 配置application.properties文件上传参数
- 所有代码添加详细中文注释

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,3 +24,14 @@ app.security.jwt.refresh-cookie-name=REFRESH_TOKEN
 
 # CORS
 app.security.cors.allowed-origins=${APP_ALLOWED_ORIGINS:http://localhost:5173}
+
+# 文件存储配置
+file.storage.upload-dir=uploads
+file.storage.max-file-size=10485760
+file.storage.max-image-size=5242880
+file.storage.max-document-size=10485760
+
+# Spring文件上传配置
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
