--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,6 +10,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# 遵循阿里巴巴规范：禁用物理外键约束
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+spring.jpa.properties.hibernate.check_nullability=false
+# 不生成外键约束
+spring.jpa.properties.org.hibernate.envers.do_not_audit_optimistic_locking_field=false
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 # 全局时区设置
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
