--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.7.4",
     "echarts": "^6.0.0",
     "pinia": "^2.1.7",
@@ -18,6 +19,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
-    "vite": "^5.3.3"
+    "vite": "^7.1.10"
   }
 }
