Add WARP.md and update .gitignore to exclude personal files
- Add comprehensive WARP.md documentation for future AI agents
- Update .gitignore to exclude personal notes (learnWord.md) and presentation files (*.pptx)
- Remove tracked presentation files from git while keeping them locally

--- a/.gitignore
+++ b/.gitignore
@@ -22,4 +22,8 @@ Thumbs.db
 *.log
 node_modules
 .backend/upload
+
+# Personal notes and presentation files
 generate_ppt.py
+docs/learnWord.md
+*.pptx
