docs: 清理冗余文档和完善.gitignore
- 删除个人学习笔记和演示文稿文件
- 删除冗余的npm配置文件和node_modules
- 删除重复的数据库SETUP.md文档
- 完善.gitignore规则，添加更全面的忽略配置
  - 临时文件 (*.tmp, *.bak, *.cache)
  - 环境配置 (.env*)
  - 上传目录 (uploads/)
  - 数据库文件 (*.db, *.sqlite)
  - 更完善的IDE和OS文件忽略

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,63 @@
-
 # Build outputs
 backend/target/
 frontend/dist/
+frontend/.vite/
 
 # Node dependencies
+node_modules/
 frontend/node_modules/
+package-lock.json
 
-# Maven wrappers (if generated later)
+# Maven wrappers
 backend/.mvn/
 backend/mvnw
 backend/mvnw.cmd
 
-# IDE / OS files
+# IDE / Editor files
 .idea/
 .vscode/
 *.iml
+*.swp
+*.swo
+*~
+.project
+.classpath
+.settings/
+
+# OS files
 .DS_Store
 Thumbs.db
+Desktop.ini
 
 # Logs
 *.log
-node_modules
+logs/
+
+# Upload files
+uploads/
+backend/uploads/
 .backend/upload
 
 # Personal notes and presentation files
 generate_ppt.py
-docs/learnWord.md
 *.pptx
+docs/learnWord.md
+docs/presentation*.md
+docs/presentation*.pptx
+.doc-cleanup-summary.md
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.cache
+
+# Environment files (may contain secrets)
+.env
+.env.local
+.env.*.local
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
